--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: UCSpalette
 Type: Package
-Title: What the Package Does (Title Case)
+Title: UCS brand color palette
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: UCS brand color palette
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
